src/objects/Postal_Code__c.object
<CustomObject>
    <description>Postal Code mappings to be used when assigning a &apos;community&apos; value to a referral.</description>
    <fields>
        <fullName>Community__c</fullName>
        <description>The community in BC assigned to this postal code.</description>
        <encrypted>true</encrypted>
        <label>Community</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Six_Digits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The postal code is 6 digits.</description>
        <label>Six Digits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Three_Digits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The postal code is three digits.</description>
        <label>Three Digits?</label>
        <type>Checkbox</type>
    </fields>
    <label>Postal Code</label>
    <listViews>
        <fullName>All_Postal_Code_Rules</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Six_Digits__c</columns>
        <columns>Three_Digits__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Postal Code Rules</label>
    </listViews>
    <nameField>
        <label>Postal Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>